static/css/style.css
/* Google Fonts */

@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@300&display=swap");

/* Global Styles */

body {
  background-color: #f8f8ff;
}

.golden-button {
  width: 141px;
  height: 41px;
  background-color: #9c8300;
  border: none;
  color: white;
  font-family: "Roboto", sans-serif;
  font-size: 18px;
  border-radius: 8px;
}

.golden-button:hover {
  background-color: #212529;
  transition: 300ms;
}

.title-text {
  font-family: "Oswald", sans-serif;
  color: #9c8300;
  margin-bottom: 50px;
  font-size: 40px;
}

.body-text {
  font-family: "Roboto", sans-serif;
  color: black;
  font-size: 16px;
  margin-bottom: 30px;
}

.page-space {
  min-height: calc(60vh - 1px);
}

.btn {
  width: 100px !important;
}

/* Hero Section */

.hero-image {
  background-size: cover;
  background: url("https://res.cloudinary.com/duvrjdbbc/image/upload/v1650836042/static/images/hero-image.9eedada8efe0.jpg");
  min-height: 80vh;
  position: relative;
  color: white;
}

.color-overlay {
  position: absolute;
  height: 100%;
  width: 100%;
}

.cafe-manbo-text {
  color: white;
  font-family: "Oswald", sans-serif;
  font-size: 150px;
}

.established-text {
  color: white;
  font-family: "Oswald", sans-serif;
  font-size: 35px;
  font-weight: 300;
}

@media screen and (max-width: 1100px) {
  .cafe-manbo-text {
    font-size: 100px;
  }

  .established-text {
    font-size: 25px;
  }
}

@media screen and (max-height: 1000px) {
  .cafe-manbo-text {
    font-size: 100px;
  }

  .established-text {
    font-size: 25px;
  }
}

@media screen and (max-width: 400px) {
  .cafe-manbo-text {
    font-size: 50px;
  }

  .established-text {
    font-size: 18px;
    margin-bottom: 0px;
  }

  .golden-button {
    font-size: 15px;
    height: 35px;
  }

  .about-text {
    padding: 10px;
  }
}

/* Feature Icon Section */

.large-feature-icon {
  font-size: 50px;
  color: #9c8300;
}


/* Navigation Bar */

.nav-item a {
  color: white;
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  margin-left: 25px;
  margin-right: 25px;
  font-size: 17px;
}

.navbar :nth-child(4) {
  color: #9c8300 !important;
}

.navbar a:hover {
  color: #9c8300 !important;
}

.nav-link:focus {
  color: #9c8300 !important;
}

.dropdown-item {
  color: white !important;
  display: inline;
  padding: 0;
  font-family: "Roboto", sans-serif;
  font-weight: 300;
}

.dropdown-item:hover {
  color: #9c8300 !important;
  background-color: transparent;
}

.nav-bar-logo {
  color: #9c8300 !important;
  font-family: "Oswald", sans-serif;
  font-size: 40px;
  font-weight: 400;
}

.dropdown-menu {
  border: none;
  background-color: #212529;
  color: white !important;
}

/* Navbar Toggler Animation */

/* Courtesy of https://www.youtube.com/watch?v=vJ85fm4m7lw&ab_channel=uknowhat */

.navbar-toggler {
  border: 0 !important;
}

.navbar-toggler:focus,
.navbar-toggler:active,
.navbar-toggler-icon:focus {
  outline: none !important;
  box-shadow: none !important;
  border: 0 !important;
}

.toggler-icon {
  width: 30px;
  height: 3px;
  background-color: #e74c3c;
  display: block;
  transition: all 0.2s;
}

.middle-bar {
  margin: 5px auto;
}

.navbar-toggler .top-bar {
  transform: rotate(45deg);
  transform-origin: 10% 10%;
}

.navbar-toggler .middle-bar {
  opacity: 0;
  filter: alpha(opacity=0);
}

.navbar-toggler .bottom-bar {
  transform: rotate(-45deg);
  transform-origin: 10% 90%;
}

.navbar-toggler.collapsed .top-bar {
  transform: rotate(0);
}

.navbar-toggler.collapsed .middle-bar {
  opacity: 1;
  filter: alpha(opacity=100);
}

.navbar-toggler.collapsed .bottom-bar {
  transform: rotate(0);
}

.navbar-toggler.collapsed .toggler-icon {
  background-color: white;
}

/* Our Menu Section */

.our-menu-image img {
  width: 100%;
}

/* Review Cards Section */

.review-profile-image {
  height: 50px;
  width: 50px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
}

.review-title-text {
  font-family: "Oswald", sans-serif;
  color: #9c8300;
  margin-bottom: 50px;
  font-size: 22px;
}

.review-body-text {
  font-family: "Roboto", sans-serif;
  color: black;
  font-size: 15px;
  margin-bottom: 30px;
}

/* JS Data Chart */

@media screen and (max-width: 500px) {
  .js-data-chart {
    display: none;
  }
}


#map {
  height: 500px;
  width: 100%;
  margin-left: 30px;
  margin-right: 30px;
}

/* Table Styling */

/* Courtesy of https://codepen.io/AllThingsSmitty/pen/MyqmdM */

table {
  border: 1px solid #ccc;
  border-collapse: collapse;
  margin: 0;
  padding: 0;
  width: 100%;
  table-layout: fixed;
}

table caption {
  font-size: 1.5em;
  margin: .5em 0 .75em;
}

table tr {
  background-color: #f8f8f8;
  border: 1px solid #f8f8f8;
  padding: .35em;
}

table th,
table td {
  padding: .625em;
  text-align: center;
}

table th {
  font-size: .85em;
  letter-spacing: .1em;
  text-transform: uppercase;
}

@media screen and (max-width: 1100px) {
  table {
    border: 0;
  }

  table caption {
    font-size: 1.3em;
  }
  
  table thead {
    border: none;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
  }
  
  table tr {
    border-bottom: 3px solid #ddd;
    display: block;
    margin-bottom: .625em;
  }
  
  table td {
    border-bottom: 1px solid #ddd;
    display: block;
    font-size: .8em;
    text-align: right;
  }
  
  table td::before {
    content: attr(data-label);
    float: left;
    font-weight: bold;
    text-transform: uppercase;
  }
  
  table td:last-child {
    border-bottom: 0;
  }
}

/* Staff Dashboard */

.red-exclamation {
  color: red;
}

.disable-hover {
  pointer-events: none;
}

.fixed-sidebar{
  width: 150px;
}

.staff-nav-bar-logo {
  color: #9c8300 !important;
  font-family: "Oswald", sans-serif;
  font-size: 30px;
  font-weight: 400;
}

.nav-link span:hover {
  color: #9c8300 !important;
}

/* Footer Section */

.footer-links a {
  color: white !important;
  text-decoration: none;
}

.footer-links a:hover {
  color: #9c8300 !important;
}


/* Django Forms Styling */

#id_amount_owed {
  max-width: 300px;
}

#id_amount_paid {
  max-width: 300px;
}

#id_first_name {
  max-width: 300px;
}

#id_last_name {
  max-width: 300px;
}

#id_contact_number {
  max-width: 300px;
}

#id_time_of_visit {
  max-width: 300px;
}

#id_date_of_visit {
  max-width: 300px;
}

#id_number_of_guests {
  max-width: 300px;
}

#id_email {
  max-width: 300px;
}

#id_username {
  max-width: 300px;
}

#id_password1 {
  max-width: 300px;
}

#id_password2 {
  max-width: 300px;
}

/* Galaxy Fold Media Query */

@media screen and (max-width: 290px) {
  .fa-3x {
    font-size: 25px !important;
  }

  .galaxy-fold {
    display: none;
  }

  p {
    font-size: 13px;
  }

  h5 {
    font-size: 18px;
  }

  .nav-bar-logo {
    font-size: 20px;
  }

  .title-text {
    font-size: 25px;
  }
}

